// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P component correct styles: type=h1 1`] = `
<div>
  <p
    class="sc-bczRLJ Gujvk"
    type="h1"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=h2 1`] = `
<div>
  <p
    class="sc-bczRLJ eJTLmz"
    type="h2"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=small1 1`] = `
<div>
  <p
    class="sc-bczRLJ bXYhRV"
    type="small1"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=small2 1`] = `
<div>
  <p
    class="sc-bczRLJ bRYrXu"
    type="small2"
  >
    hello
  </p>
</div>
`;
